project-06-kubernetes-application-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: java-app
  namespace: enterprise-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: java-app

  template:

    metadata:
      labels:
        app: java-app

    spec:

      containers:

      - name: java-app

        image: enterprise-app:v1

        ports:
        - containerPort: 8080
