project-06-kubernetes-application-deployment/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: java-service
  namespace: enterprise-app

spec:

  selector:
    app: java-app

  ports:

    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
