project-06-kubernetes-application-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: java-ingress
  namespace: enterprise-app

spec:

  rules:

  - host: app.company.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: java-service

            port:

              number: 80
